deploy script update to create gh-pages-temp and force push to gh-pages then delete temp

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
     "dev": "webpack serve --open",
-    "deploy": "git push origin `git subtree split --prefix dist main`:gh-pages --force"
+    "deploy": "git subtree split --prefix dist -b gh-pages-temp && git push origin gh-pages-temp:gh-pages --force && git branch -D gh-pages-temp"
   },
   "keywords": [],
   "author": "",
